clubhouse: Fix vertical aligment of label notification
The label bottom margin changed in commit 76bd3e84 from 25px to 30px
to consider the buttons below. But when there are no buttons, the text
looks misaligned.

https://phabricator.endlessm.com/T29046

--- a/data/theme/gnome-shell-sass/_endless.scss
+++ b/data/theme/gnome-shell-sass/_endless.scss
@@ -820,6 +820,9 @@ $clubhouse_action_buttons_color_active: #44D7B6;
   &:hover, &:focus, &:active {
     background-color: transparent;
   }
+  &.with-buttons .clubhouse-notification-label {
+      margin-bottom: 30px;
+  }
   .clubhouse-notification-close-button {
     color: $clubhouse_action_buttons_color;
     padding: 9px 5px 0 0;
@@ -928,7 +931,7 @@ $clubhouse_action_buttons_color_active: #44D7B6;
   .clubhouse-notification-label {
     color: black;
     margin-left: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     width: ($clubhouse-notification-width - $clubhouse-image-width - 30px);
     font: 18px "Metropolis Medium, Sans-Serif";
   }
